# clockd

./: Cargo.toml  README.md
src/: alarm.rs  audio.rs  cli_config.rs  clockctl.rs  commands.rs  error.rs  fdrecv.rs  lib.rs  main.rs  parker.rs  prelude.rs  timepart.rs  tz_display.rs  util.rs  waybar.rs  webapp.rs
src/alarm/: unixmoment.rs
src/util/: futurestream.rs
